# advent-of-code-2021

./: adventOfCode2021.cabal
benchmarks/: sixteen-small.txt  twentyone-small.txt
src/: eight-one.hs  eight-two.hs  eighteen-one.hs  eighteen-two.hs  eleven-one.hs  eleven-two.hs  fifteen-one.hs  fifteen-two.hs  five-one.hs  five-two.hs  four-one.hs  four-two.hs  fourteen-one.hs  fourteen-two.hs  nine-one.hs  nine-two.hs  nineteen-one.hs  nineteen-two.hs  one-one.hs  one-two.hs  seven-one.hs  seven-two.hs  seventeen-one.hs  seventeen-two.hs  six-one.hs  sixteen-one.hs  sixteen-two.hs  ten-one.hs  ten-two.hs  thirteen-one.hs  thirteen-two.hs  three-one.hs  three-two.hs  twelve-one.hs  twelve-two.hs  twenty-one.hs  twentyone-one.hs  twentyone-two.hs  twentytwo-one.hs  twentytwo-two.hs  (+2 more)
